# stuffs

./: .gitignore  MdTest.hs  Multiline.hs  RD  Utils.hs  curl.sh  format.hs  heb.cabal  lang-study  lang-study.hs  md.hs  md.par  md.sql  mozg.hs  res.html
