name:                heb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Your name here
maintainer:          your.address@example.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable lang-study
  main-is:             lang-study.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                        , text
                        , http-conduit
                        , bytestring
                        , tagsoup
  default-language:    Haskell2010

executable mozg
  main-is:             mozg.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                        , text
                        , tagsoup
                        , containers
  default-language:    Haskell2010

executable md
  main-is:             md.hs
  other-modules:       Multiline, Utils
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                        , text
                        , tagsoup
                        , process
--                        , lens
                        , data-default
                        , transformers
                        , xml-conduit
                        , html-conduit
                        , conduit-extra
                        , resourcet
                        , conduit
                        , conduit-combinators
                        , xml-types
                        , template-haskell
                        , blaze-html
                        , shakespeare
                        , containers
                        , postgresql-simple
                        , time

  default-language:    Haskell2010

executable format
  main-is:             format.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                        , text
                        , bytestring
  default-language:    Haskell2010
